Updates homepage content with links

--- a/index.html
+++ b/index.html
@@ -429,25 +429,29 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-9 col-xs-12">
-          <div>
-            <h1>What's Popular: </h1>
+          <div class="homepage-content-header">
+            What's Popular:
           </div>
           <div class="article-preview">
             <div class="row">
-              <div class="col-sm-4 col-xs-12">
-                <img src="assets/img/ashima.jpg" class="article-preview-thumbnail" />
+              <div class="col-sm-4 col-xs-12 article-preview-thumbnail-container">
+                <a href="#">
+                  <img src="assets/img/ashima.jpg" class="article-preview-thumbnail" />
+                </a>
               </div>
               <div class="col-sm-8 col-xs-12 article-preview-content">
                 <div class="article-preview-title">
-                  Article Title Goes Here
+                  <a href="#">Article Title Goes Here</a>
                 </div>
                 <div class="article-preview-description">
-                  Super brief description or teaser text will go here or teaser text will
-                  go here Super brief description or teaser text will go here Super brief
-                  description or teaser text will go here
+                  <a href="#">
+                    Super brief description or teaser text will go here or teaser text will
+                    go here Super brief description or teaser text will go here Super brief
+                    description or teaser text will go here
+                  </a>
                 </div>
                 <div class="article-preview-metadata">
-                  By Author Name | Date | 293 views | 3 comments
+                  By <a href="#" class="article-preview-author">Author Name</a> | Date | 293 views | 3 comments
                 </div>
               </div>
             </div>
@@ -455,20 +459,24 @@
           <hr />
           <div class="article-preview">
             <div class="row">
-              <div class="col-sm-4 col-xs-12">
-                <img src="assets/img/climb.png" class="article-preview-thumbnail" />
+              <div class="col-sm-4 col-xs-12 article-preview-thumbnail-container">
+                <a href="#">
+                  <img src="assets/img/food.jpg" class="article-preview-thumbnail" />
+                </a>
               </div>
               <div class="col-sm-8 col-xs-12 article-preview-content">
                 <div class="article-preview-title">
-                  Article Title Goes Here
+                  <a href="#">Article Title Goes Here</a>
                 </div>
                 <div class="article-preview-description">
-                  Super brief description or teaser text will go here or teaser text will
-                  go here Super brief description or teaser text will go here Super brief
-                  description or teaser text will go here
+                  <a href="#">
+                    Super brief description or teaser text will go here or teaser text will
+                    go here Super brief description or teaser text will go here Super brief
+                    description or teaser text will go here
+                  </a>
                 </div>
                 <div class="article-preview-metadata">
-                  By Author Name | Date | 293 views | 3 comments
+                  By <a href="#" class="article-preview-author">Author Name</a> | Date | 293 views | 3 comments
                 </div>
               </div>
             </div>
@@ -476,20 +484,24 @@
           <hr />
           <div class="article-preview">
             <div class="row">
-              <div class="col-sm-4 col-xs-12">
-                <img src="assets/img/climb.png" class="article-preview-thumbnail" />
+              <div class="col-sm-4 col-xs-12 article-preview-thumbnail-container">
+                <a href="#">
+                  <img src="assets/img/climb.png" class="article-preview-thumbnail" />
+                </a>
               </div>
               <div class="col-sm-8 col-xs-12 article-preview-content">
                 <div class="article-preview-title">
-                  Article Title Goes Here
+                  <a href="#">Article Title Goes Here</a>
                 </div>
                 <div class="article-preview-description">
-                  Super brief description or teaser text will go here or teaser text will
-                  go here Super brief description or teaser text will go here Super brief
-                  description or teaser text will go here
+                  <a href="#">
+                    Super brief description or teaser text will go here or teaser text will
+                    go here Super brief description or teaser text will go here Super brief
+                    description or teaser text will go here
+                  </a>
                 </div>
                 <div class="article-preview-metadata">
-                  By Author Name | Date | 293 views | 3 comments
+                  By <a href="#" class="article-preview-author">Author Name</a> | Date | 293 views | 3 comments
                 </div>
               </div>
             </div>
@@ -497,20 +509,24 @@
           <hr />
           <div class="article-preview">
             <div class="row">
-              <div class="col-sm-4 col-xs-12">
-                <img src="assets/img/climb.png" class="article-preview-thumbnail" />
+              <div class="col-sm-4 col-xs-12 article-preview-thumbnail-container">
+                <a href="#">
+                  <img src="assets/img/libby.jpg" class="article-preview-thumbnail" />
+                </a>
               </div>
               <div class="col-sm-8 col-xs-12 article-preview-content">
                 <div class="article-preview-title">
-                  Article Title Goes Here
+                  <a href="#">Article Title Goes Here</a>
                 </div>
                 <div class="article-preview-description">
-                  Super brief description or teaser text will go here or teaser text will
-                  go here Super brief description or teaser text will go here Super brief
-                  description or teaser text will go here
+                  <a href="#">
+                    Super brief description or teaser text will go here or teaser text will
+                    go here Super brief description or teaser text will go here Super brief
+                    description or teaser text will go here
+                  </a>
                 </div>
                 <div class="article-preview-metadata">
-                  By Author Name | Date | 293 views | 3 comments
+                  By <a href="#" class="article-preview-author">Author Name</a> | Date | 293 views | 3 comments
                 </div>
               </div>
             </div>
@@ -518,20 +534,24 @@
           <hr />
           <div class="article-preview">
             <div class="row">
-              <div class="col-sm-4 col-xs-12">
-                <img src="assets/img/climb.png" class="article-preview-thumbnail" />
+              <div class="col-sm-4 col-xs-12 article-preview-thumbnail-container">
+                <a href="#">
+                  <img src="assets/img/mkt.png" class="article-preview-thumbnail" />
+                </a>
               </div>
               <div class="col-sm-8 col-xs-12 article-preview-content">
                 <div class="article-preview-title">
-                  Article Title Goes Here
+                  <a href="#">Article Title Goes Here</a>
                 </div>
                 <div class="article-preview-description">
-                  Super brief description or teaser text will go here or teaser text will
-                  go here Super brief description or teaser text will go here Super brief
-                  description or teaser text will go here
+                  <a href="#">
+                    Super brief description or teaser text will go here or teaser text will
+                    go here Super brief description or teaser text will go here Super brief
+                    description or teaser text will go here
+                  </a>
                 </div>
                 <div class="article-preview-metadata">
-                  By Author Name | Date | 293 views | 3 comments
+                  By <a href="#" class="article-preview-author">Author Name</a> | Date | 293 views | 3 comments
                 </div>
               </div>
             </div>
@@ -752,7 +772,7 @@
   <footer class="site-footer">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 col-sm-12 col-xs-12 footer-logo">
+        <div class="col-md-4 col-sm-4 col-xs-12 footer-logo">
           <img src="assets/img/logo_teal.png" alt="Crux Crush logo">
           <div>
             <div>
@@ -763,7 +783,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-8 col-sm-12 col-xs-12">
+        <div class="col-md-8 col-sm-8 col-xs-12 footer-content">
           <div class="row">
             <div class="col-md-6 col-sm-6 col-xs-6">
               <nav>
@@ -795,7 +815,9 @@
               <hr />
               <div class="pull-right dev-credit">
                 <h5>Site development by:</h5>
-                <p class="pull-right"><a href="https://andrewpalmer.co" target="_blank">Andrew Palmer</a></p>
+                <a href="https://andrewpalmer.co" target="_blank">
+                  <img src="assets/img/ap_logo.png" alt="developer-logo" class="dev-logo" />
+                </a>
               </div>
             </div>
           </div>
@@ -807,7 +829,7 @@
   <!--  footer section -->
   <footer class="navbar-fixed-bottom bottom-ad">
     <div class="ad-320x50">
-      fixed ad
+      fixed ad 320x50
     </div>
   </footer>
 
@@ -816,14 +838,17 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+          <h4 class="modal-title" id="myModalLabel">Follow us by email</h4>
         </div>
         <div class="modal-body">
-          ...
+          <p class="small">Enter your email address to receive notifications of new posts by email.</p>
+          <div class="input-group input-group-sm modal-signup">
+            <input type="text" class="form-control" placeholder="climber@example.com">
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-primary">Submit</button>
         </div>
       </div>
     </div>
