Adds category page and social icons

--- a/index.html
+++ b/index.html
@@ -600,6 +600,11 @@
           </div>
         </div>
         <div class="col-sm-3 col-xs-12 ads-sidebar">
+          <div id="social-icons">
+            <a href="https://www.instagram.com/cruxcrush/" target="_blank"><i class="ci ci-insta"/></i></a>
+            <a href="https://www.facebook.com/cruxcrush/" target="_blank"><i class="ci ci-facebook"/></i></a>
+            <a href="https://twitter.com/cruxcrush" target="_blank"><i class="ci ci-twitter"/></i></a>
+          </div>
           <div class="widget">
             <h4>Join our Mailing List</h4>
             <p>Keep up-to-date with the latest news, and we'll <strong>send you a discount for the course!</strong></p>
