Adds author page and updates links

--- a/post.html
+++ b/post.html
@@ -49,13 +49,13 @@
             <!-- desktop menu -->
             <ul class="nav navbar-nav navbar-right non-mobile-menu">
               <li class="active"><a href="index.html">Home</a></li>
-              <li><a href="index.html">Contact</a></li>
               <li>
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseResources">Resources</a>
               </li>
               <li>
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapseBlog">Blog</a>
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapseTraining">Training</a>
               </li>
+              <li><a href="index.html">Contact</a></li>
               <li>
                 <form class="navbar-form">
                   <div class="form-group input-group">
@@ -88,10 +88,10 @@
                         <h5>Subcategories</h5>
                         <hr />
                         <ul class="submenu-subcategories">
-                          <li class="submenu-subcategory-option">subcategory</li>
-                          <li class="submenu-subcategory-option">subcategory</li>
-                          <li class="submenu-subcategory-option">subcategory</li>
-                          <li class="submenu-subcategory-option">subcategory</li>
+                          <a href="category.html"><li class="submenu-subcategory-option">subcategory</li></a>
+                          <a href="category.html"><li class="submenu-subcategory-option">subcategory</li></a>
+                          <a href="category.html"><li class="submenu-subcategory-option">subcategory</li></a>
+                          <a href="category.html"><li class="submenu-subcategory-option">subcategory</li></a>
                         </ul>
                       </div>
                       <div class="col-xs-6">
@@ -221,10 +221,10 @@
                   <h4 class="submenu-header">Resources Categories:</h4>
                   <hr />
                   <ul class="submenu-subcategories">
-                    <li class="submenu-subcategory-option">subcategory</li>
-                    <li class="submenu-subcategory-option">subcategory</li>
-                    <li class="submenu-subcategory-option">subcategory</li>
-                    <li class="submenu-subcategory-option">subcategory</li>
+                    <a href="category.html"><li class="submenu-subcategory-option">subcategory</li></a>
+                    <a href="category.html"><li class="submenu-subcategory-option">subcategory</li></a>
+                    <a href="category.html"><li class="submenu-subcategory-option">subcategory</li></a>
+                    <a href="category.html"><li class="submenu-subcategory-option">subcategory</li></a>
                   </ul>
                 </div>
                 <div class="col-md-9 col-sm-9 col-xs-9 recommended-articles-section">
@@ -239,7 +239,7 @@
                           <img src="assets/img/climb.png" />
                           <div class="article-thumbnail-info">
                             <p class="article-thumbnail-title">How to crush a super long title that keeps on going</p>
-                            <p class="article-thumbnail-author">Bodie Bear</p>
+                            <a href="author.html"><p class="article-thumbnail-author">Bodie Bear</p></a>
                           </div>
                         </a>
                       </div>
@@ -250,7 +250,7 @@
                           <img src="assets/img/climb.png" />
                           <div class="article-thumbnail-info">
                             <p class="article-thumbnail-title">How to crush a super long title that keeps on going</p>
-                            <p class="article-thumbnail-author">Bodie Bear</p>
+                            <a href="author.html"><p class="article-thumbnail-author">Bodie Bear</p></a>
                           </div>
                         </a>
                       </div>
@@ -261,7 +261,7 @@
                           <img src="assets/img/climb.png" />
                           <div class="article-thumbnail-info">
                             <p class="article-thumbnail-title">How to crush a super long title that keeps on going</p>
-                            <p class="article-thumbnail-author">Bodie Bear</p>
+                            <a href="author.html"><p class="article-thumbnail-author">Bodie Bear</p></a>
                           </div>
                         </a>
                       </div>
@@ -272,7 +272,7 @@
                           <img src="assets/img/climb.png" />
                           <div class="article-thumbnail-info">
                             <p class="article-thumbnail-title">How to crush a super long title that keeps on going</p>
-                            <p class="article-thumbnail-author">Bodie Bear</p>
+                            <a href="author.html"><p class="article-thumbnail-author">Bodie Bear</p></a>
                           </div>
                         </a>
                       </div>
@@ -284,17 +284,17 @@
           </div>
         </div>
         <div class="panel panel-default">
-          <div id="collapseBlog" class="panel-collapse collapse">
+          <div id="collapseTraining" class="panel-collapse collapse">
             <div class="panel-body post-submenu">
               <div class="giant-screen-settings">
                 <div class="col-md-3 col-sm-3 col-xs-3">
-                  <h4 class="submenu-header">Blog Categories:</h4>
+                  <h4 class="submenu-header">Training Categories:</h4>
                   <hr />
                   <ul class="submenu-subcategories">
-                    <li class="submenu-subcategory-option">subcategory</li>
-                    <li class="submenu-subcategory-option">subcategory</li>
-                    <li class="submenu-subcategory-option">subcategory</li>
-                    <li class="submenu-subcategory-option">subcategory</li>
+                    <a href="category.html"><li class="submenu-subcategory-option">subcategory</li></a>
+                    <a href="category.html"><li class="submenu-subcategory-option">subcategory</li></a>
+                    <a href="category.html"><li class="submenu-subcategory-option">subcategory</li></a>
+                    <a href="category.html"><li class="submenu-subcategory-option">subcategory</li></a>
                   </ul>
                 </div>
                 <div class="col-md-9 col-sm-9 col-xs-9 recommended-articles-section">
@@ -309,7 +309,7 @@
                           <img src="assets/img/climb.png" />
                           <div class="article-thumbnail-info">
                             <p class="article-thumbnail-title">How to crush a super long title that keeps on going</p>
-                            <p class="article-thumbnail-author">Bodie Bear</p>
+                            <a href="author.html"><p class="article-thumbnail-author">Bodie Bear</p></a>
                           </div>
                         </a>
                       </div>
@@ -320,7 +320,7 @@
                           <img src="assets/img/climb.png" />
                           <div class="article-thumbnail-info">
                             <p class="article-thumbnail-title">How to crush a super long title that keeps on going</p>
-                            <p class="article-thumbnail-author">Bodie Bear</p>
+                            <a href="author.html"><p class="article-thumbnail-author">Bodie Bear</p></a>
                           </div>
                         </a>
                       </div>
@@ -331,7 +331,7 @@
                           <img src="assets/img/climb.png" />
                           <div class="article-thumbnail-info">
                             <p class="article-thumbnail-title">How to crush a super long title that keeps on going</p>
-                            <p class="article-thumbnail-author">Bodie Bear</p>
+                            <a href="author.html"><p class="article-thumbnail-author">Bodie Bear</p></a>
                           </div>
                         </a>
                       </div>
@@ -342,7 +342,7 @@
                           <img src="assets/img/climb.png" />
                           <div class="article-thumbnail-info">
                             <p class="article-thumbnail-title">How to crush a super long title that keeps on going</p>
-                            <p class="article-thumbnail-author">Bodie Bear</p>
+                            <a href="author.html"><p class="article-thumbnail-author">Bodie Bear</p></a>
                           </div>
                         </a>
                       </div>
@@ -414,7 +414,7 @@
               Article Title Goes Here and Can Be Really Really Really Really Really Really Long
             </div>
             <div class="article-metadata">
-              By <a href="#" class="article-author">Author Name</a> | Date | 3 comments
+              By <a href="author.html" class="article-author">Author Name</a> | Date | 3 comments
             </div>
           </div>
           <div class="article-content">
@@ -672,9 +672,9 @@
               <nav>
                 <h5>Nav</h5>
                 <ul class="list-unstyled">
-                  <li><a href="">Home</a></li>
-                  <li><a href="">Blog</a></li>
-                  <li><a href="">Resources</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="category.html">Training</a></li>
+                  <li><a href="category.html">Resources</a></li>
                   <li><a href="">Contact</a></li>
                 </ul>
               </nav>
