--- a/author.html
+++ b/author.html
@@ -49,13 +49,13 @@
             <!-- desktop menu -->
             <ul class="nav navbar-nav navbar-right non-mobile-menu">
               <li class="active"><a href="index.html">Home</a></li>
-              <li><a href="index.html">Contact</a></li>
               <li>
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseResources">Resources</a>
               </li>
               <li>
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseTraining">Training</a>
               </li>
+              <li><a href="index.html">Contact</a></li>
               <li>
                 <form class="navbar-form">
                   <div class="form-group input-group">
@@ -364,7 +364,7 @@
       <div class="row">
         <div class="col-sm-9 col-xs-12">
           <div class="center-panel-content-header">
-            Training Articles:
+            Author Archive: Bodie Bear
           </div>
           <div class="row filter-options">
             <div class="col-sm-2 col-xs-6 filter-option filter-option-available">
