Adds about and news pages, removes unneeded images

--- a/category.html
+++ b/category.html
@@ -49,13 +49,14 @@
             <!-- desktop menu -->
             <ul class="nav navbar-nav navbar-right non-mobile-menu">
               <li class="active"><a href="index.html">Home</a></li>
-              <li><a href="index.html">Contact</a></li>
               <li>
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseResources">Resources</a>
               </li>
               <li>
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseTraining">Training</a>
               </li>
+              <li><a href="index.html">Contact</a></li>
+              <li><a href="https://squareup.com/market/crux-crush" target="_blank">Shop</a></li>
               <li>
                 <form class="navbar-form">
                   <div class="form-group input-group">
@@ -562,10 +563,10 @@
               <nav>
                 <h5>Crux Crush</h5>
                 <ul class="list-unstyled">
-                  <li><a href="">About Us</a></li>
+                  <li><a href="about-us.html">About Us</a></li>
                   <li><a href="">Team</a></li>
                   <li><a href="">Contact</a></li>
-                  <li><a href="">In The News</a></li>
+                  <li><a href="in-the-news.html">In The News</a></li>
                   <li><a href="">Jobs</a></li>
                   <li><a href="">Advertising</a></li>
                 </ul>
