--- a/in-the-news.html
+++ b/in-the-news.html
@@ -57,7 +57,6 @@
               </li>
               <li><a href="index.html">Contact</a></li>
               <li><a href="https://squareup.com/market/crux-crush" target="_blank">Shop</a></li>
-              <li><a href="about-us.html">About Us</a></li>
               <li>
                 <form class="navbar-form">
                   <div class="form-group input-group">
@@ -360,246 +359,82 @@
     </div>
   </header>
 
-  <!-- hero -->
-  <div id="hero-carousel" class="carousel slide hero" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#hero-carousel" data-slide-to="0" class="active"></li>
-      <li data-target="#hero-carousel" data-slide-to="1"></li>
-      <li data-target="#hero-carousel" data-slide-to="2"></li>
-      <li data-target="#hero-carousel" data-slide-to="3"></li>
-      <li data-target="#hero-carousel" data-slide-to="4"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <div class="hero-image-container">
-          <img src="assets/img/rifle.jpg" alt="rifle" class="hero-image">
-          <div class="article-info">
-            <div class="article-title">
-              <a href="post.html">5 QUICK TIPS TO UP YOUR PHOTO GAME AT THE CRAG</a>
-            </div>
-            <div class="article-metadata">
-              By Sarah | Dec 23, 2016 | 78 comments
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="item">
-        <div class="hero-image-container">
-          <img src="assets/img/libby.jpg" alt="libby" class="hero-image">
-          <div class="article-info">
-            <div class="article-title">
-              <a href="post.html">GIRL CRUSH OF THE MONTH: LIBBY PETER</a>
-            </div>
-            <div class="article-metadata">
-              By Emily | Dec 01, 2016 | 78 comments
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="item">
-        <div class="hero-image-container">
-          <img src="assets/img/stretch.png" alt="stretch" class="hero-image">
-          <div class="article-info">
-            <div class="article-title">
-              <a href="post.html">DYNAMIC STRETCHING: FAD OR FACT?</a>
-            </div>
-            <div class="article-metadata">
-              By Galina | Oct 10, 2016 | 5 comments
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="item">
-        <div class="hero-image-container">
-          <img src="assets/img/gift.jpg" alt="gifts" class="hero-image">
-          <div class="article-info">
-            <div class="article-title">
-              <a href="post.html">HOLIDAY GIFT GUIDE 2016</a>
-            </div>
-            <div class="article-metadata">
-              By Galina | Nov 25, 2016 | 5 comments
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="item">
-        <div class="hero-image-container">
-          <img src="assets/img/xray.jpg" alt="xray" class="hero-image">
-          <div class="article-info">
-            <div class="article-title">
-              <a href="post.html">GIRL CRUSH OF THE MONTH: KYRA CONDIE</a>
-            </div>
-            <div class="article-metadata">
-              By Galina | Oct 06, 2016 | 5 comments
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Controls -->
-    <a class="left carousel-control" href="#hero-carousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#hero-carousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-
-  <!--  opt-in section -->
-  <section id="optin">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-9">
-          <p class="lead"><strong>Subscribe to our mailing list </strong> and we'll keep you posted when there's a new article.</p>
-        </div>
-				<div class="col-sm-3">
-          <!-- Button trigger modal -->
-          <button type="button" class="btn btn-success btn-lg btn-block" data-toggle="modal" data-target="#myModal">
-            Subscribe
-          </button>
-				</div>
-			</div>
-		</div>
-  </section>
-  <!--  opt-in section -->
-
   <!--  homepage content section -->
   <section>
-    <div class="container" id="center-panel-content">
+    <div class="container" id="in-the-news-panel-content">
       <div class="row">
         <div class="col-sm-9 col-xs-12">
           <div class="center-panel-content-header">
-            What's Popular:
+            <img src="assets/img/logo-wordmark.png" class="logo-wordmark"/><span class="in-the-news-header"> In The News</span>
           </div>
-          <div class="article-preview">
-            <div class="row">
-              <div class="col-sm-4 col-xs-12 article-preview-thumbnail-container">
-                <a href="post.html">
-                  <img src="assets/img/ashima.jpg" class="article-preview-thumbnail" />
+          <table class="table">
+            <tr>
+              <td>
+                <a href="http://cognitea.com/blogs/the-stories/14082765-what-3-kick-ass-climbers-can-teach-you-about-building-a-community" target="_blank">
+                  <img src="assets/img/news-cognitea.png" class="news-img" />
                 </a>
-              </div>
-              <div class="col-sm-8 col-xs-12 article-preview-content">
-                <div class="article-preview-title">
-                  <a href="post.html">Article Title Goes Here</a>
+              </td>
+              <td>
+                <div class="news-name">Cognitea</div>
+                <div class="news-title">
+                  What 3 Kick Ass Climbers Can Teach You About Building a Community
                 </div>
-                <div class="article-preview-description">
-                  <a href="post.html">
-                    Super brief description or teaser text will go here or teaser text will
-                    go here Super brief description or teaser text will go here Super brief
-                    description or teaser text will go here
-                  </a>
-                </div>
-                <div class="article-preview-metadata">
-                  By <a href="author.html" class="article-preview-author">Author Name</a> | Date | 3 comments
-                </div>
-              </div>
-            </div>
-          </div>
-          <hr />
-          <div class="article-preview">
-            <div class="row">
-              <div class="col-sm-4 col-xs-12 article-preview-thumbnail-container">
-                <a href="post.html">
-                  <img src="assets/img/food.jpg" class="article-preview-thumbnail" />
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <a href="https://vimeo.com/90697922" target="_blank">
+                  <img src="assets/img/news-ironmaiden.jpeg" class="news-img" />
                 </a>
-              </div>
-              <div class="col-sm-8 col-xs-12 article-preview-content">
-                <div class="article-preview-title">
-                  <a href="post.html">Article Title Goes Here</a>
+              </td>
+              <td>
+                <div class="news-name">Iron Maiden</div>
+                <div class="news-title">
+                  Iron Maiden 2014 Highlights Video
                 </div>
-                <div class="article-preview-description">
-                  <a href="post.html">
-                    Super brief description or teaser text will go here or teaser text will
-                    go here Super brief description or teaser text will go here Super brief
-                    description or teaser text will go here
-                  </a>
-                </div>
-                <div class="article-preview-metadata">
-                  By <a href="author.html" class="article-preview-author">Author Name</a> | Date | 3 comments
-                </div>
-              </div>
-            </div>
-          </div>
-          <hr />
-          <div class="article-preview">
-            <div class="row">
-              <div class="col-sm-4 col-xs-12 article-preview-thumbnail-container">
-                <a href="post.html">
-                  <img src="assets/img/climb.png" class="article-preview-thumbnail" />
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <a href="http://www.metro.us/local/rock-climbing-women-call-for-a-boston-area-community-of-female-climbers-metro-us/tmWmiC---03C5R8QVZtLVo/" target="_blank">
+                  <img src="assets/img/news-metro.jpg" class="news-img" />
                 </a>
-              </div>
-              <div class="col-sm-8 col-xs-12 article-preview-content">
-                <div class="article-preview-title">
-                  <a href="post.html">Article Title Goes Here</a>
+              </td>
+              <td>
+                <div class="news-name">Boston Metro</div>
+                <div class="news-title">
+                  Rock climbing women call for a Boston-area community of female climbers
                 </div>
-                <div class="article-preview-description">
-                  <a href="post.html">
-                    Super brief description or teaser text will go here or teaser text will
-                    go here Super brief description or teaser text will go here Super brief
-                    description or teaser text will go here
-                  </a>
-                </div>
-                <div class="article-preview-metadata">
-                  By <a href="author.html" class="article-preview-author">Author Name</a> | Date | 3 comments
-                </div>
-              </div>
-            </div>
-          </div>
-          <hr />
-          <div class="article-preview">
-            <div class="row">
-              <div class="col-sm-4 col-xs-12 article-preview-thumbnail-container">
-                <a href="post.html">
-                  <img src="assets/img/libby.jpg" class="article-preview-thumbnail" />
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <a href="#">
+                  <img src="assets/img/news-grindtv.png" class="news-img" />
                 </a>
-              </div>
-              <div class="col-sm-8 col-xs-12 article-preview-content">
-                <div class="article-preview-title">
-                  <a href="post.html">Article Title Goes Here</a>
+              </td>
+              <td>
+                <div class="news-name">GrindTV.com</div>
+                <div class="news-title">
+                  Do rock climbers need to wear more clothes?
                 </div>
-                <div class="article-preview-description">
-                  <a href="post.html">
-                    Super brief description or teaser text will go here or teaser text will
-                    go here Super brief description or teaser text will go here Super brief
-                    description or teaser text will go here
-                  </a>
-                </div>
-                <div class="article-preview-metadata">
-                  By <a href="author.html" class="article-preview-author">Author Name</a> | Date | 3 comments
-                </div>
-              </div>
-            </div>
-          </div>
-          <hr />
-          <div class="article-preview">
-            <div class="row">
-              <div class="col-sm-4 col-xs-12 article-preview-thumbnail-container">
-                <a href="post.html">
-                  <img src="assets/img/mkt.png" class="article-preview-thumbnail" />
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <a href="#">
+                  <img src="assets/img/news-ulondon.png" class="news-img" />
                 </a>
-              </div>
-              <div class="col-sm-8 col-xs-12 article-preview-content">
-                <div class="article-preview-title">
-                  <a href="post.html">Article Title Goes Here</a>
+              </td>
+              <td>
+                <div class="news-name">Reych, Zofia (2013)</div>
+                <div class="news-title">
+                  Climbing Women and Niche Media: Beyond alternative femininities
+                  MA Thesis at The University of London.
                 </div>
-                <div class="article-preview-description">
-                  <a href="post.html">
-                    Super brief description or teaser text will go here or teaser text will
-                    go here Super brief description or teaser text will go here Super brief
-                    description or teaser text will go here
-                  </a>
-                </div>
-                <div class="article-preview-metadata">
-                  By <a href="author.html" class="article-preview-author">Author Name</a> | Date | 3 comments
-                </div>
-              </div>
-            </div>
-          </div>
+              </td>
+            </tr>
+          </table>
         </div>
         <div class="col-sm-3 col-xs-12 ads-sidebar">
           <div id="social-icons">
@@ -659,6 +494,7 @@
                 <h5>Crux Crush</h5>
                 <ul class="list-unstyled">
                   <li><a href="about-us.html">About Us</a></li>
+                  <li><a href="">Team</a></li>
                   <li><a href="">Contact</a></li>
                   <li><a href="in-the-news.html">In The News</a></li>
                   <li><a href="">Jobs</a></li>
